# ContextChain

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pipeline.py  pyproject.toml  render.yaml  requirements-render.txt  requirements.txt  run_agents.py  run_once_cache_embeddings.py  test_emo_query.py  test_pipeline.py
agents/: approval_packager.py  needs_analyzer.py  risk_auditor.py  vendor_intelligence.py
band_agents/: __init__.py  approval_packager_band.py  needs_analyzer_band.py  risk_auditor_band.py  vendor_intelligence_band.py
core/: __init__.py  confidence_router.py  emo.py  model_config.py
demo/: pipeline_demo.py
emo/: README.md  __init__.py
rag/: __init__.py  embeddings_cache.pkl  retriever.py  vendor_kb.json
scripts/: band_session_diagnostics.py  scan_json.py  update_agent_keys.py
static/: index.html
