[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextchain"
version = "0.4.0"
description = "ContextChain — EMO-based multi-agent pipeline (demo)"
readme = "README.md"
requires-python = ">=3.11"

[project.urls]
"Source" = "https://example.com/"

[tool.setuptools.packages.find]
where = ["."]
include = ["emo", "agents", "core", "band_agents", "demo"]
